<resources>
    <string name="app_name">Resturants app</string>
    <string name="your_direction">حدد وجهتك</string>
    <string name="restaurants">المطاعم</string>
    <string name="Coffees">المقاهي</string>
    <string name="restaurants_coffees">المطاعم / المقاهي</string>
    <string name="search">بحث</string>
    <string name="near_restaurant">المطعم الأقرب لك:</string>
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="forget_password">هل نسيت كلمة المرور ؟</string>
    <string name="register">تسجيل</string>
    <string name="skip">تخطي</string>
    <string name="password_confirm">تأكيد كلمة المرور</string>
    <string name="name">اسم المستخدم</string>
    <string name="recover_password">إستعادة كلمة المرور</string>
    <string name="your_email">أدخل بريدك الإلكتروني المسجل</string>
    <string name="send">إرسال</string>
    <string name="title_activity_maps">Map</string>
    <string name="write_your_rate">أكتب تعليقك هنا</string>
    <string name="no_data">لا يوجد بيانات</string>
    <string name="address">العنوان</string>
    <string name="hours">الساعات</string>
    <string name="phone">الرقم</string>
    <string name="avg_rate">متوسط التقييم</string>
    <string name="edit_profile">تعديل الصفحة الشخصية</string>
    <string name="setting">الإعدادات</string>
    <string name="search_distance">مسافة البحث المفضلة</string>
    <string name="save">حفظ</string>
    <string name="cancel">إلغاء</string>
    <string name="details">معلومات</string>
    <string name="rate">تقييم</string>
    <string name="public_rate">تقييم العام</string>
    <string name="enter_valid_email_address">أدخل ايميل صحيح</string>
    <string name="enter_password_more_than_five_letters">أدخل كلمة مرور أطول من خمس حروف</string>
    <string name="enter_name_more_than_four_letters">أدخل اسم اكبر من اربع حروف</string>
    <string name="enter_same_password">أدخل كلمة مرور متطابقة</string>
    <string name="please_enter_valid_data">أدخل بيانات صحيحة للتسجيل</string>
    <string name="successfully_sign_in">تم تسجيل الدخول بنجاح</string>
    <string name="email_is_not_registered_you_can_sign_up">هذا الايميل غير مسجل مسبقاً, يرجى تسجيل حساب جديد</string>
    <string name="wrong_password">خطأ في كلمة المرور</string>
    <string name="please_enter_strong_password">رجاء أدخل كلمة مرور قوية</string>
    <string name="the_email_is_already_registered_you_can_sign_in">الإيميل مسجل مسبقاً</string>
    <string name="error_in_registration">حصل خطأ في التسجيل</string>
    <string name="send_done">تم الإرسال بنجاح</string>
    <string name="send_done_error">خطأ في الإرسال</string>
    <string name="email_not_found">الايميل غير موجود</string>
    <string name="logout_done">تم تسجيل خروج بنجاح</string>
    <string name="permession_needed">يجب الحصول على صلاحية الموقع</string>
    <string name="storage_permession_needed_to_capture_image_and_share_it">يجب الحصول على صلاحية الموقع لاتمام بعض المهام</string>
    <string name="api_key">AIzaSyDgeckahFdnj56zTlipjeQVGmz_f4zdWPQ</string>
    <string name="near_restaurant_coffee">المطعم والمقهى الأقرب لك</string>
    <string name="near_cofee">المقهى الأقرب لك</string>
    <string name="open_now">فاتح الآن</string>
    <string name="add_comment_more_than_3">أدخل تعليق أكبر من ثلاث حروف</string>

    <string name="add_new_comment">إضافة تعليق جديد</string>
    <string name="sorry_you_have_to_sign_in_to_comment">عزيزي المستخدم يجب عليك تسجيل الدخول لكي تتمكن من إضافة تعليق.</string>
    <string name="log_out">تسجيل خروج</string>
    <string name="are_you_sure_you_want_to_log_out">هل تريد تسجيل الخروج؟</string>
    <string name="yes">نعم</string>
    <string name="you_already_commented">لقد أضفت تعليقاً, لا يمكنك إضافة تعليق آخر.</string>
    <string name="successfully_update_user_data">تم تغيير بيانات المستخدم بنجاح!</string>

</resources>
