<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.LoginActivity">

        <FrameLayout
            android:id="@+id/frame_login_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView">

            <LinearLayout
                android:id="@+id/linear_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                android:padding="16dp">




                <EditText
                    android:id="@+id/edt_login_email"
                    android:layout_width="match_parent"
                    android:textAlignment="viewStart"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:gravity="start"
                    android:hint="@string/email"
                    android:padding="12dp"
                    android:textColor="@color/colorFont"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"

                    android:drawablePadding="10dp"
                    android:gravity="start"
                    android:hint="@string/password"
                    android:padding="12dp"
                    android:textColor="@color/colorFont"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorPrimaryDark"
                    android:padding="8dp"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_forget_password"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:padding="8dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorFont"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_register"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">



                <EditText
                    android:id="@+id/edt_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="10dp"
                    android:gravity="start"
                    android:hint="@string/name"
                    android:inputType="textPersonName"

                    android:padding="12dp"
                    android:textColor="@color/colorFont"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/edt_register_email"
                    android:textAlignment="viewStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="10dp"
                    android:gravity="start"
                    android:hint="@string/email"
                    android:padding="12dp"
                    android:textColor="@color/colorFont"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:gravity="start"
                    android:textAlignment="viewStart"
                    android:hint="@string/password"
                    android:padding="12dp"
                    android:textColor="@color/colorFont"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/edt_register_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:gravity="start"
                    android:hint="@string/password_confirm"
                    android:padding="12dp"
                    android:textColor="@color/colorFont"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_register_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorPrimaryDark"
                    android:padding="8dp"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/linear_recover"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:visibility="gone"
                android:orientation="vertical"
                android:gravity="start"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorFont"
                    android:text="@string/recover_password"
                    android:textAppearance="@style/fontBold"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorFont"
                    android:layout_marginTop="5dp"
                    android:text="@string/your_email"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edt_recover_email"
                    android:textAlignment="viewStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_email"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="10dp"
                    android:gravity="start"
                    android:hint="@string/email"
                    android:padding="12dp"
                    android:textColor="@color/colorFont"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorPrimaryDark"
                    android:padding="8dp"
                    android:text="@string/send"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />


</LinearLayout>


        </FrameLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_login_data">


            <ProgressBar
                android:layout_width="30dp"
                android:id="@+id/progress"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_height="30dp"
                ></ProgressBar>
            <Button
                android:id="@+id/btn_register"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"
                android:textColor="@color/colorFont"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_skip"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/skip"
                android:textColor="@color/colorFont"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>