<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.SettingActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/cardview_profile"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorFont2"
                android:textSize="16sp"></TextView>


            <EditText
                android:id="@+id/edt_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:hint="@string/name"
                android:inputType="textPersonName"

                android:padding="12dp"
                android:textColor="@color/colorFont"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edt_register_email"
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:drawablePadding="10dp"
                android:gravity="start"
                android:hint="@string/email"
                android:padding="12dp"
                android:textColor="@color/colorFont"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:hint="@string/password"
                android:padding="12dp"
                android:textColor="@color/colorFont"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_height="wrap_content">


            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="5dp"></View>
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
android:gravity="center"
                android:background="@color/colorPrimaryDark"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardview_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorFont2"
                android:textSize="16sp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_distance"
                android:textAppearance="@style/fontLight"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorFont2"
                android:textSize="16sp"></TextView>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:padding="4dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 كيلو متر"
                android:textAppearance="@style/fontLight"
                android:textColor="@color/colorFont2"
                android:textSize="13sp"></TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/btn_save_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="5dp"></View>
                <Button
                    android:id="@+id/btn_cancel_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/cancel"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logout"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:onClick="logout"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <ImageView
            android:id="@+id/img_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
android:onClick="back"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_back"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="17dp"
            android:textColor="@color/colorFont"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>